Closed
Bug 836844
Opened 13 years ago
Closed 13 years ago
CSS background is not painted correctly. The background is cut off by the height of the view.
Categories
(Core :: Layout, defect)
Tracking
()
VERIFIED
FIXED
mozilla21
People
(Reporter: alice0775, Assigned: mattwoodrow)
References
Details
(Keywords: regression)
Attachments
(4 files)
|
440 bytes,
text/html
|
Details | |
|
34.46 KB,
image/png
|
Details | |
|
4.42 KB,
patch
|
roc
:
review+
lsblakk
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
|
2.22 KB,
patch
|
roc
:
review+
|
Details | Diff | Splinter Review |
Build Identifier:
http://hg.mozilla.org/mozilla-central/rev/20bbf73921f4
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:21.0) Gecko/20130131 Firefox/21.0 ID:20130131031009
Steps to reproduce:
1. Open attached testcase html
2. Scroll down
Actual results:
The background is cut off by the height of the view.
Expected results:
The background should be painted with whole height of page
Regression window(m-c)
Good:
http://hg.mozilla.org/mozilla-central/rev/677e87c11252
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:21.0) Gecko/20130129 Firefox/21.0 ID:20130129202850
Bad:
http://hg.mozilla.org/mozilla-central/rev/5f9775715519
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:21.0) Gecko/20130130 Firefox/21.0 ID:20130130050547
Pushlog:
http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=677e87c11252&tochange=5f9775715519
Regression window(m-i)
Good:
http://hg.mozilla.org/integration/mozilla-inbound/rev/f8cdfa25ad9f
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:21.0) Gecko/20130129 Firefox/21.0 ID:20130129205947
Bad:
http://hg.mozilla.org/integration/mozilla-inbound/rev/ab658aec6a28
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:21.0) Gecko/20130129 Firefox/21.0 ID:20130129210748
Pushlog:
http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=f8cdfa25ad9f&tochange=ab658aec6a28
| Reporter | ||
Updated•13 years ago
|
OS: Windows 7 → All
| Reporter | ||
Comment 1•13 years ago
|
||
Assignee: nobody → matt.woodrow
Updated•13 years ago
|
status-firefox21:
--- → affected
Comment 3•13 years ago
|
||
I reproduced this bug on Intel Mac OS X 10.8. (Firefox runs in x86-64.)
| Assignee | ||
Comment 6•13 years ago
|
||
This matches what we do when painting, fixes this bug and the previous one.
Attachment #709443 -
Flags: review?(roc)
Comment on attachment 709443 [details] [diff] [review]
Pass the right clip area for canvas frames
Review of attachment 709443 [details] [diff] [review]:
-----------------------------------------------------------------
Need reftests!!!
Attachment #709443 -
Flags: review?(roc) → review+
| Assignee | ||
Comment 10•13 years ago
|
||
Attachment #709535 -
Flags: review?(roc)
Attachment #709535 -
Flags: review?(roc) → review+
Blocks: 837196
| Assignee | ||
Updated•13 years ago
|
Keywords: checkin-needed
Comment 13•13 years ago
|
||
Flags: in-testsuite+
Keywords: checkin-needed
Comment 14•13 years ago
|
||
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla21
| Assignee | ||
Comment 17•13 years ago
|
||
Comment on attachment 709443 [details] [diff] [review]
Pass the right clip area for canvas frames
[Approval Request Comment]
Bug caused by (feature/regressing bug #): Bug 832341
User impact if declined: Only affects aurora if Bug 832341 is uplifted, but causes backgrounds to disappear when scrolling on some pages.
Testing completed (on m-c, etc.): Been on m-c for a while.
Risk to taking this patch (and alternatives if risky): Low risk.
String or UUID changes made by this patch: None
Attachment #709443 -
Flags: approval-mozilla-aurora?
Updated•13 years ago
|
status-firefox20:
--- → affected
tracking-firefox20:
--- → +
Comment 18•13 years ago
|
||
Comment on attachment 709443 [details] [diff] [review]
Pass the right clip area for canvas frames
Tracking and approving for uplift to go with 832341.
Attachment #709443 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 19•13 years ago
|
||
Comment 20•13 years ago
|
||
I confirm the fix is verified on FF 20.b1:
Mozilla/5.0 (Windows NT 6.1; rv:20.0) Gecko/20100101 Firefox/20.0
Mozilla/5.0 (X11; Linux i686; rv:20.0) Gecko/20100101 Firefox/20.0
Mozilla/5.0 (Macintosh; Intel Mac OS X 10.8; rv:20.0) Gecko/20100101 Firefox/20.0
Comment 21•13 years ago
|
||
I confirm this is fixed on FF 21b1 on Windows 7 x64, Mac OS 10.7 and Ubuntu 12.10.
Build id: (20130401192816)
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•