Bug 836844 - Pass the right clip area for canvas frames. r=roc